scss/_styleguide-base.scss
/* ... */
.color-gray-pale {
  background-color: $color-gray-pale;
  .form-hint{
    color: $color-gray-dark;
  }
}

.color-container-small {
  height: 40px;
  margin-bottom: 0.8rem;
  margin-top: 0.8rem;
  border: $outer-border;

  .color-text-container {
    padding: 7px 15px 7px 15px;
    margin-bottom: 0rem;
    margin-top: 0rem;

    .text-white {
      color:$color-white;
    }
    .text-black {
      color:$color-black;
    }
    .text-gray {
      color:$color-gray-medium-light;
    }

    .text-negative {
      color:$color-negative;
    }

    .text-positive {
      color:$color-positive;
    }
  }

  &.color-black {
    background-color: $color-black;
  }
  &.color-gray-medium-dark {
    background-color: $color-gray-medium-dark;
  }
  &.color-gray-light {
    background-color: $color-gray-light;
  }
  &.color-gray-pale {
    background-color: $color-gray-pale;
  }
  &.color-data-violet {
    background-color: $color-data-violet;
  }
  &.color-data-violet-high-opacity {
    background-color: $color-data-violet-high-opacity;
  }
  &.color-data-violet-medium-opacity {
    background-color: $color-data-violet-medium-opacity;
  }
  &.color-data-violet-low-opacity {
    background-color: $color-data-violet-low-opacity;
  }
  &.color-data-purple {
    background-color: $color-data-purple;
  }
  &.color-data-purple-high-opacity {
    background-color: $color-data-purple-high-opacity;
  }
  &.color-data-purple-medium-opacity {
    background-color: $color-data-purple-medium-opacity;
  }
  &.color-data-purple-low-opacity {
    background-color: $color-data-purple-low-opacity;
  }
  &.color-data-magenta {
    background-color: $color-data-magenta;
  }
  &.color-data-magenta-high-opacity {
    background-color: $color-data-magenta-high-opacity;
  }
  &.color-data-magenta-medium-opacity {
    background-color: $color-data-magenta-medium-opacity;
  }
  &.color-data-magenta-low-opacity {
    background-color: $color-data-magenta-low-opacity;
  }
  &.color-data-orange {
    background-color: $color-data-orange;
  }
  &.color-data-orange-high-opacity {
    background-color: $color-data-orange-high-opacity;
  }
  &.color-data-orange-medium-opacity {
    background-color: $color-data-orange-medium-opacity;
  }
  &.color-data-orange-low-opacity {
    background-color: $color-data-orange-low-opacity;
  }
  &.color-data-teal {
    background-color: $color-data-teal;
  }
  &.color-data-teal-high-opacity {
    background-color: $color-data-teal-high-opacity;
  }
  &.color-data-teal-medium-opacity {
    background-color: $color-data-teal-medium-opacity;
  }
  &.color-data-teal-low-opacity {
    background-color: $color-data-teal-low-opacity;
  }
  &.color-data-turquoise {
    background-color: $color-data-turquoise;
  }
  &.color-data-turquoise-high-opacity {
    background-color: $color-data-turquoise-high-opacity;
  }
  &.color-data-turquoise-medium-opacity {
    background-color: $color-data-turquoise-medium-opacity;
  }
  &.color-data-turquoise-low-opacity {
    background-color: $color-data-turquoise-low-opacity;
  }
}

.color-text-container {
  margin-bottom: $spacing-medium;
  margin-top: $spacing-small;
  p {
    margin: 0px;
  }
}
@media screen and (min-width:768px) {
  .color-col {

    &:first-child {
      padding-left: 0px;
    }

    &:last-child {
      padding-right: 0px;
    }
  }
}

//------------ Code
.component-preview figure.highlight{
  margin: 0px;
}

figure.highlight{
  border: $inner-border;
}

code{
  background-color: $color-gray-pale;
}

code,
pre {
  font-family: monospace;
  line-height: 1.4em;
  code{
    background-color: transparent;
  }
}

pre {
  padding: 1.6rem;
  white-space: pre-wrap;
  margin: 0;
  code {
    padding: 0;

    &::before,
    &::after {
      display: none;
    }
  }
}

code {
  padding-top: 0.2em;
  padding-bottom: 0.2em;
}

.code-highlight {
  background-color: $color-gray-pale;
  padding: 16px;
  pre, code {
    max-width: $text-max-width;
  }
}

//HEX colors for color page
.code-color-hex {
  font-family: monospace;
  font-size: 1.6rem;
  font-weight: $font-weight-bold;
}

//Variables for color page
.code-color-variable {
  font-family: monospace;
  font-size: 1.3rem;
  font-weight: $font-weight-normal;
  line-height: 1.4em;
}

// Code snippet boxes
.code-sample {
  pre,
  code {
    background: none;
    font-size: 1.3rem;
    line-height: 1.4em;
    margin-top: 0;
    padding: 0;
  }
}


//----------------  Page styles

.styleguide-child-container + .styleguide-child-container{
  margin-top: 40px;
}

.page-ui-components {

  .font-lead {
    &:first-of-type {
      margin-top: 3.2rem;
    }
  }
}
.page-selvbetjeningsløsninger .page-container{overflow:hidden;}
.page-tringuide-overflowmenu-html .container,
.page-tringuide-responsive-overflowmenu-html .container{
  min-height: 400px;
}
.component-preview-basic-collapse, .component-preview-modal, .component-preview-text-input, .component-preview-tags, .component-preview-search  .container{
  padding-top: 4px;
  padding-bottom: 4px;
}
.component-preview-overflow-menu .container, .component-preview-overflow-menu-left .container{
  min-height: 400px;
}
.page-cookie-message-html > .container{

  min-height: 300px;
  @include media-breakpoint-up(md) {
    min-height: 250px;
  }
}
.component-preview-text-input .container, .component-preview-text-input-width .container{ //quick fix for iframe resize
  padding-bottom: 4px;
}
.component-preview-accordion, .component-preview-accordion-border, .component-preview-accordion-multi{
  .container {
    padding-top: 8px;
  }
}
.component-preview-file-input .container{
  min-height: 100px;
}
.component-preview-basic-collapse .container{
  min-height: 150px;
  padding-top: 8px;
}
.component-preview-skiplink {
  .component-example{
    overflow: hidden;
    position: relative;
  }
}
.component-preview-date-input{
  & .container{
    min-height: 200px; //so that datepicker is visible
  }
}
/* ... */

